<resources>
    <string name="app_name">Inventory App</string>

    <string name="product_name">Product Name:</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity:</string>
    <string name="mfg_date">Manufacture Date:</string>

    <string name="hint_product_name">Enter Product Name</string>
    <string name="hint_product_price">Enter Product Price</string>
    <string name="hint_product_mfg_date">eg: 27/02/2016</string>

    <string name="delete_dialog_msg">Delete this product?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="editor_activity_title_edit_product">Edit Product</string>

    <string name="editor_activity_title_new_product">Add a Product</string>

    <string name="editor_insert_product_successful">Product Saved</string>

    <string name="editor_insert_product_failed">Error with saving Product</string>

    <string name="editor_update_product_failed">Error with updating product.</string>

    <string name="editor_update_product_successful">Product Updated.</string>

    <string name="editor_delete_product_successful">Product deleted</string>

    <string name="editor_delete_product_failed">Error with deleting product</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
</resources>
